[build-system]
requires = ["poetry"]
[tool.poetry]
name = "borg-meta-package"
version = "0.2.2"
description = "Borg Meta Package"
authors = ["causaLens team"]

[[tool.poetry.source]]
name = "causalens"
url = "https://causalens.jfrog.io/artifactory/api/pypi/python-internal/simple/"
default = true

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
[tool.borg.scripts]
